sumo/tests/sumo/extended/emitter/errors/routedist/missing_id/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: Attribute 'id' is missing in definition of emitter/routedistelem 'emitter'.
Quitting (on error).
